Fix dropdown jumping

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -252,6 +252,7 @@ oi-select .select-search {
     border: 1px solid $lightBlue;
     padding: 6px 10px;
     height: 42px;
+    line-height: 28px;
     color: $dark;
   }
 
